_content/css: fix <pre> font size
Should use rem, not em.
Otherwise code blocks like on go.dev/blog/context have text that is too small.

Fixes golang/go#49833.

Reviewed-on: https://go-review.googlesource.com/c/website/+/367974
Trust: Russ Cox <rsc@golang.org>
Run-TryBot: Russ Cox <rsc@golang.org>
TryBot-Result: Go Bot <gobot@golang.org>

--- a/_content/css/styles.css
+++ b/_content/css/styles.css
@@ -30,7 +30,7 @@ pre,
 }
 pre,
 .linedtextarea .lines div {
-  font-size: 0.83em;
+  font-size: 0.83rem;
   overflow-x: auto;
 }
 /* Trim spaces to be more like plain text spaces in text like "Use <code>go get</code> to ...", but not in Markdown <pre> blocks. */
